objects/newObjectCommit__c.object
<CustomObject>
    <fields>
        <fullName>TestFldsss__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>newObjectCommits</relationshipLabel>
        <relationshipName>newObjectCommits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testFld__c</fullName>
        <label>testFld</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <label>newObjectCommit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>newObjectCommit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>newObjectCommits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>